# llmoji

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_provider.yml
.github/workflows/: ci.yml  release.yml
examples/: README.md  inspect_bundle.py  openclaw_hook.ts  opencode_plugin.ts
examples/openclaw_plugin/: index.ts  openclaw.plugin.json
llmoji/: __init__.py  _shared_token.py  _util.py  analyze.py  backfill.py  cli.py  haiku.py  haiku_prompts.py  paths.py  scrape.py  synth.py  synth_prompts.py  taxonomy.py  upload.py
llmoji/_hooks/: __init__.py  _journal_write.sh.partial  _kaomoji_validate.sh.partial  claude_code.sh.tmpl  claude_codex_nudge.sh.tmpl  codex.sh.tmpl  hermes.sh.tmpl  hermes_nudge.sh.tmpl  hermes_subagent_stop.sh.tmpl
llmoji/_plugins/: _kaomoji_taxonomy.ts.partial  openclaw_index.ts.tmpl  openclaw_plugin.json.tmpl  opencode.ts.tmpl
llmoji/providers/: __init__.py  base.py  claude_code.py  codex.py  hermes.py  openclaw.py  opencode.py
llmoji/sources/: __init__.py  _common.py  chatgpt_export.py  claude_export.py  gemini_export.py  journal.py  openhands_export.py
tests/: test_analyze_dry_run.py  test_canonicalize.py  test_chatgpt_export.py  test_correctness.py  test_gemini_export.py  test_import.py  test_install_autodetect.py  test_openhands_export.py  test_pipeline_parity.py  test_public_surface.py  test_status_extended.py  test_upload_proof_of_life.py
