[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmoji"
dynamic = ["version"]
description = "Making agents cuter"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "a9lim", email = "mx@a9l.im" }]
keywords = [
    "kaomoji",
    "claude",
    "claude-code",
    "codex",
    "hermes",
    "emoticons",
    "agents",
    "interpretability",
    "mechanistic-interpretability",
    "llm",
    "ai",
    "research-tooling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# Lean by design. The package is provider-agnostic data collection
# plus canonical synthesis plus bundle/upload. Heavier ML deps
# (torch, sentence-transformers, matplotlib, saklas) live in the
# research-side `llmoji-study` repo.
#
# Three SDKs are runtime deps so any of the three synthesis backends
# (anthropic, openai-Responses, OpenAI-compatible local Chat
# Completions) Just Works out of `pip install llmoji`. The local
# backend reuses the openai SDK with a base_url override.
dependencies = [
    "anthropic>=0.40",
    "openai>=1.55",
    "huggingface_hub>=0.25",
    # tqdm drives the analyze progress bars in :mod:`llmoji.analyze`.
    # Already a transitive dep via huggingface_hub and openai, listed
    # explicitly so the surface stays honest if either upstream drops it.
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6.9",
    "pyright>=1.1.400",
]

[project.urls]
Homepage = "https://github.com/a9lim/llmoji"
Repository = "https://github.com/a9lim/llmoji"
Issues = "https://github.com/a9lim/llmoji/issues"
Releases = "https://github.com/a9lim/llmoji/releases"
Research = "https://github.com/a9lim/llmoji-study"
Dataset = "https://huggingface.co/datasets/a9lim/llmoji"

[project.scripts]
llmoji = "llmoji.cli:main"

# Single source of truth for the version is ``__version__`` in
# llmoji/__init__.py. Hatch's default regex source parses the literal
# from the file without executing it, so the eager re-exports at
# import time don't fire at build time.
[tool.hatch.version]
path = "llmoji/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["llmoji"]
# The bash hook templates under llmoji/_hooks/ ship as part of the
# package directory automatically; no force-include needed (and a
# force-include would duplicate them in the wheel zip).

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: bash + jq subprocess parity tests; skip with -m 'not slow' for fast local iteration",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E741", "E402", "E731"]

# Pyright is scoped to the v1.0 frozen public API surface. Internal
# helpers (cli argparse plumbing, analyze pipeline glue, provider
# config writers, the backfill module's transcript walkers) lean on
# argparse + third-party SDK shapes whose stubs are uneven; running
# the checker over them is all noise. The contract users import from
# ``llmoji`` is the real surface, so it's what we hold to a type
# checker.
[tool.pyright]
include = [
    "llmoji/__init__.py",
    "llmoji/taxonomy.py",
    "llmoji/synth_prompts.py",
    "llmoji/synth.py",
    "llmoji/scrape.py",
    "llmoji/providers/__init__.py",
    "llmoji/providers/base.py",
    "llmoji/upload.py",
]
exclude = ["**/__pycache__"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportMissingImports = "warning"
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportAttributeAccessIssue = "error"
reportArgumentType = "error"
reportCallIssue = "error"
reportReturnType = "error"
reportAssignmentType = "error"
